# dualspace

./: .gitignore  README.md  pyproject.toml
configs/: cifar10.yaml  cifar10.yml  uci_har.yaml
dualspace/: __init__.py
dualspace/cli/: __init__.py  calibrate.py  diag_g.py  dump_pairs.py  eval_coverage.py  eval_pareto.py  export_test_img.py  infer.py  metrics.py  phi_image.py  prep_data.py  train_amortized.py  train_gen.py  visualize.py
dualspace/dataio/: cifar10.py  uci_har.py
dualspace/densities/: mdn.py
dualspace/encoders/: condition_encoder.py  phi_image.py  phi_timeseries.py
dualspace/generators/: diffusion_image.py  diffusion_timeseries.py  scheduler.py  unet1d.py  unet2d.py
dualspace/infer/: region_infer.py  visualize.py
dualspace/metrics/: coverage.py  fid.py  informativeness.py  mmd.py  ot_sinkhorn.py  tstr_tsnt.py
dualspace/regions/: conformal.py  guided_sampling.py  levelset.py
dualspace/train/: dump_pairs.py  train_amortized.py  train_generator.py  urc_loss.py
dualspace/utils/: config.py  device.py  ema.py  env.py  io.py  plotting.py  quantile.py  seed.py  splits.py  vision.py
scripts/: 00_prep.sh  01_train_gen.sh  02_dump_pairs.sh  03_train_amortized.sh  04_calibrate.sh  05_region_infer.sh  06_eval.sh  07_visualize.sh  08_extra_metrics.sh
