[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dualspace"
version = "0.1.0"
description = "implementing the dualspace idea for ICLR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "torchvision",
    "torchaudio",
    "einops>=0.8.1",
    "matplotlib>=3.10.6",
    "ml-collections>=1.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pot>=0.9.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "click>=8.2.1",
    "pyyaml>=6.0.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
dualspace = "dualspace.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dualspace"]
